[package]
name = "fuzz"
version = "0.1.0"
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies.sniffglue]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "read_packet"
path = "fuzz_targets/read_packet.rs"